--- a/App.xaml
+++ b/App.xaml
@@ -2,8 +2,18 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Circle_2"
-             StartupUri="MainWindow.xaml">
+             xmlns:tb="http://www.hardcodet.net/taskbar">
     <Application.Resources>
-         
+        <!-- System Tray Icon -->
+        <tb:TaskbarIcon x:Key="TrayIcon"
+                        IconSource="/Resources/icon.ico"
+                        ToolTipText="Circle">
+            <tb:TaskbarIcon.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Open Settings" Click="OpenSettings_Click" />
+                    <MenuItem Header="Exit" Click="Exit_Click" />
+                </ContextMenu>
+            </tb:TaskbarIcon.ContextMenu>
+        </tb:TaskbarIcon>
     </Application.Resources>
 </Application>
