--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,6 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Circle_2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid/>
+        xmlns:tb="http://www.hardcodet.net/taskbar"
+        Title="MainWindow" Height="350" Width="525">
+    <Grid>
+        <!-- System Tray Icon -->
+
+    </Grid>
+
 </Window>
