--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,11 +5,60 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Circle_2"
         mc:Ignorable="d"
-        xmlns:tb="http://www.hardcodet.net/taskbar"
-        Title="MainWindow" Height="350" Width="525">
+        SizeToContent="WidthAndHeight"
+        xmlns:tb="http://www.hardcodet.net/taskbar">
     <Grid>
-        <!-- System Tray Icon -->
+        <!-- Define a 5-row layout -->
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
+        <!-- First Row -->
+        <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="5">
+            <Image Source="Resources/to-left.png" Width="32" Height="32" Margin="4"/>
+            <TextBlock Text="To left" VerticalAlignment="Center" Margin="10,0" />
+            <Button Content="Action 1" Width="75" Margin="10,0" />
+        </StackPanel>
+
+        <!-- Second Row -->
+        <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="5">
+            <Image Source="Resources/to-right.png" Width="32" Height="32" Margin="4" />
+            <TextBlock Text="To right" VerticalAlignment="Center" Margin="10,0" />
+            <Button Content="Action 2" Width="75" Margin="10,0" />
+        </StackPanel>
+
+        <!-- Third Row -->
+        <StackPanel Orientation="Horizontal" Grid.Row="2" Margin="5">
+            <Image Source="Resources/to-top.png" Width="32" Height="32" Margin="4" />
+            <TextBlock Text="To bottom" VerticalAlignment="Center" Margin="10,0" />
+            <Button Content="Action 3" Width="75" Margin="10,0" />
+        </StackPanel>
+
+        <!-- Fourth Row -->
+        <StackPanel Orientation="Horizontal" Grid.Row="3" Margin="5">
+            <Image Source="Resources/to-bottom.png" Width="32" Height="32" Margin="4" />
+            <TextBlock Text="To top" VerticalAlignment="Center" Margin="10,0" />
+            <Button Content="Action 4" Width="75" Margin="10,0" />
+        </StackPanel>
+
+        <!-- Fifth Row -->
+        <StackPanel Orientation="Horizontal" Grid.Row="4" Margin="5">
+            <Image Source="Resources/to-maximize.png" Width="32" Height="32" Margin="4" />
+            <TextBlock Text="Maximize" VerticalAlignment="Center" Margin="10,0" />
+            <Button Content="Action 5" Width="75" Margin="10,0" />
+        </StackPanel>
+
+        <!-- Sixth Row: Start on Windows Startup Checkbox -->
+        <StackPanel Orientation="Horizontal" Grid.Row="5" Margin="5">
+            <CheckBox x:Name="StartupCheckbox" Content="Start on Windows startup" VerticalAlignment="Center" Margin="5,0"
+                Checked="CheckBox_Checked" 
+                Unchecked="CheckBox_Unchecked"/>
+        </StackPanel>
     </Grid>
 
 </Window>
