Add recording keystrokes

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -21,35 +21,36 @@
         <!-- First Row -->
         <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="5">
             <Image Source="Resources/to-left.png" Width="32" Height="32" Margin="4"/>
-            <TextBlock Text="To left" VerticalAlignment="Center" Margin="10,0" />
+            <TextBox Text="To left" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,0" 
+                    PreviewKeyDown="RecordKeys" />
             <Button Content="Action 1" Width="75" Margin="10,0" />
         </StackPanel>
 
         <!-- Second Row -->
         <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="5">
             <Image Source="Resources/to-right.png" Width="32" Height="32" Margin="4" />
-            <TextBlock Text="To right" VerticalAlignment="Center" Margin="10,0" />
+            <TextBox Text="To right" VerticalAlignment="Center" Margin="10,0" />
             <Button Content="Action 2" Width="75" Margin="10,0" />
         </StackPanel>
 
         <!-- Third Row -->
         <StackPanel Orientation="Horizontal" Grid.Row="2" Margin="5">
             <Image Source="Resources/to-top.png" Width="32" Height="32" Margin="4" />
-            <TextBlock Text="To bottom" VerticalAlignment="Center" Margin="10,0" />
+            <TextBox Text="To bottom" VerticalAlignment="Center" Margin="10,0" />
             <Button Content="Action 3" Width="75" Margin="10,0" />
         </StackPanel>
 
         <!-- Fourth Row -->
         <StackPanel Orientation="Horizontal" Grid.Row="3" Margin="5">
             <Image Source="Resources/to-bottom.png" Width="32" Height="32" Margin="4" />
-            <TextBlock Text="To top" VerticalAlignment="Center" Margin="10,0" />
+            <TextBox Text="To top" VerticalAlignment="Center" Margin="10,0" />
             <Button Content="Action 4" Width="75" Margin="10,0" />
         </StackPanel>
 
         <!-- Fifth Row -->
         <StackPanel Orientation="Horizontal" Grid.Row="4" Margin="5">
             <Image Source="Resources/to-maximize.png" Width="32" Height="32" Margin="4" />
-            <TextBlock Text="Maximize" VerticalAlignment="Center" Margin="10,0" />
+            <TextBox Text="Maximize" VerticalAlignment="Center" Margin="10,0" />
             <Button Content="Action 5" Width="75" Margin="10,0" />
         </StackPanel>
 
