--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -22,7 +22,8 @@
         <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="5">
             <Image Source="Resources/to-left.png" Width="32" Height="32" Margin="4"/>
             <TextBox Text="To left" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,0" 
-                    PreviewKeyDown="RecordKeys"
+                    
+                     GotKeyboardFocus="StartRecording"
                      LostKeyboardFocus="AbortRecording"/>
             <Button Content="Action 1" Width="75" Margin="10,0" />
         </StackPanel>
