--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,6 +7,7 @@
         xmlns:components="clr-namespace:Circle_2.Components"
         mc:Ignorable="d"
         SizeToContent="WidthAndHeight"
+        Deactivated="OnLostFocus"
         xmlns:tb="http://www.hardcodet.net/taskbar">
     <Window.Resources>
         <ResourceDictionary>
